<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- ImageView -->
    <ImageView
        android:id="@+id/back_button_create_task"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/retour"
        android:src="@drawable/baseline_arrow_back_24"
        android:layout_alignParentStart="true"
        />

    <!-- Title -->
    <TextView
        android:id="@+id/title_create_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_task"
        android:fontFamily="@font/baby_sparkle"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@id/back_button_create_task"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="50dp"/>

    <!-- Task Name EditText -->
    <EditText
        android:id="@+id/task_name_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_name_form"
        android:fontFamily="@font/christmas_stories"
        android:inputType="text"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_below="@id/title_create_task" />

    <!-- Task Description EditText -->
    <EditText
        android:id="@+id/task_description_form"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/task_description_form"
        android:fontFamily="@font/christmas_stories"
        android:inputType="text"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_below="@id/task_name_form"
        android:layout_marginTop="20dp" />

    <!-- Assignee Spinner -->
    <Spinner
        android:id="@+id/assignee_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:backgroundTint="@color/black"
        android:layout_below="@id/task_description_form"
        android:layout_marginTop="20dp" />

    <!-- Task Type Spinner -->
    <Spinner
        android:id="@+id/typeTacheSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:backgroundTint="@color/black"
        android:layout_below="@id/assignee_spinner"
        android:layout_marginTop="20dp" />

    <!-- Task Type Priorité -->
    <Spinner
        android:id="@+id/typePrioriteSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:backgroundTint="@color/black"
        android:layout_below="@id/typeTacheSpinner"
        android:layout_marginTop="20dp" />

    <!-- Start Date Button -->
    <Button
        android:id="@+id/start_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/christmas_stories"
        android:textStyle="bold"
        android:text="@string/task_form_choose_start_date"
        android:layout_below="@id/typePrioriteSpinner"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/lavender" />

    <!-- Start Date TextView -->
    <TextView
        android:id="@+id/start_date_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Date de début : Non définie"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_below="@id/start_date_button"
        android:layout_marginTop="10dp" />

    <!-- End Date Button -->
    <Button
        android:id="@+id/end_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/christmas_stories"
        android:textStyle="bold"
        android:text="@string/task_form_choose_end_date"
        android:layout_below="@id/start_date_textview"
        android:layout_marginTop="20dp" />

    <!-- End Date TextView -->
    <TextView
        android:id="@+id/end_date_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Date de fin : Non définie"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_below="@id/end_date_button"
        android:layout_marginTop="10dp" />

    <!-- Buttons Row -->
    <LinearLayout
        android:id="@+id/buttons_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/end_date_textview"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/task_form_save_button"
            android:fontFamily="@font/christmas_stories"
            android:textStyle="bold"
            android:layout_marginEnd="10dp" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/task_form_save_cancel"
            android:fontFamily="@font/christmas_stories"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>