<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bleu">
    


    <TextView
        android:id="@+id/title_manage_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baby_sparkle"
        android:text="@string/manage_tasks"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="140dp"/>


    <Button
        android:id="@+id/add_task_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lavender"
        android:drawableLeft="@drawable/create"
        android:drawablePadding="8dp"
        android:fontFamily="@font/baby_sparkle"
        android:padding="10dp"
        android:text="Ajouter !"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/categories_layout"
        app:layout_constraintEnd_toStartOf="@+id/title_manage_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="20dp" />



    <Button
        android:id="@+id/filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lavender"
        android:drawablePadding="8dp"
        android:fontFamily="@font/baby_sparkle"
        android:padding="10dp"
        android:text="@string/filter"
        android:drawableLeft="@drawable/filter"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/categories_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/title_manage_task"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="20dp" />

    <LinearLayout
        android:id="@+id/categories_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_manage_task"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/recent_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/christmas_stories"
            android:textStyle="bold"
            android:text="@string/recent"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_weight="0.25"
            android:layout_marginHorizontal="15dp" />

        <TextView
            android:id="@+id/today_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/christmas_stories"
            android:textStyle="bold"
            android:text="@string/today"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_weight="0.15"
            android:layout_marginHorizontal="10dp" />

        <TextView
            android:id="@+id/prioritaire_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/christmas_stories"
            android:textStyle="bold"
            android:text="@string/prioritaire"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_weight="0.45"
            android:layout_marginHorizontal="10dp" />

        <TextView
            android:id="@+id/fini_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/christmas_stories"
            android:textStyle="bold"
            android:text="@string/fini"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_weight="0.15"
            android:layout_marginHorizontal="15dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_progression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categories_layout"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/progression"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/progress"
            android:textSize="30sp"
            android:fontFamily="@font/christmas_stories"
            android:textStyle="bold"
            android:layout_marginHorizontal="70dp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ProgressBar
                android:id="@+id/background_progressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="100"
                android:progressDrawable="@drawable/stats_full"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ProgressBar
                android:id="@+id/stats_progressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="75"
                android:progressDrawable="@drawable/stats_progress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pourcentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/christmas_stories"
                android:text="65 %"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tachesfini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/christmas_stories"
        android:text="4 taches sur 7 fini !"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ln_progression" />


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/task_fragment_manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tachesfini">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_tasks_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tachesfini"
        android:layout_marginTop="20dp"
        tools:itemCount="5"
        tools:listitem="@layout/task_rv_cell" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <!--<ImageButton
        android:id="@+id/task_confirm_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription=""
        android:src="@drawable/help"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />-->





</androidx.constraintlayout.widget.ConstraintLayout>